--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,4 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <!-- Language submenu in the overflow (top-right) -->
+    <item
+        android:id="@+id/action_language"
+        android:title="@string/action_language"
+        app:showAsAction="never">
+        <menu>
+            <item
+                android:id="@+id/action_lang_en"
+                android:title="@string/lang_english" />
+            <item
+                android:id="@+id/action_lang_af"
+                android:title="@string/lang_afrikaans" />
+            <item
+                android:id="@+id/action_lang_zu"
+                android:title="@string/lang_zulu" />
+        </menu>
+    </item>
+
 </menu>
