--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -2,19 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/nav_add_user"
-        android:title="Add Event"
+        android:title="@string/nav_add_event"
         android:icon="@android:drawable/ic_menu_add" />
 
     <item
         android:id="@+id/nav_view_users"
-        android:title="View Events"
+        android:title="@string/nav_view_events"
         android:icon="@android:drawable/ic_menu_view" />
-
 
     <item
         android:id="@+id/nav_gallery"
-        android:title="View Gallery"
+        android:title="@string/nav_view_gallery"
         android:icon="@android:drawable/ic_menu_gallery" />
-
-
 </menu>
+
