Updated Pick Images button, now includes camera icon, neatened up event type spinner box outline to change with theme.

--- a/app/src/main/res/layout/fragment_add_user.xml
+++ b/app/src/main/res/layout/fragment_add_user.xml
@@ -333,16 +333,24 @@ android:dividerPadding="12dp">
     android:layout_height="wrap_content" />
 
 <!-- Image picker -->
-<Button
-    android:id="@+id/btn_pick_images"
-    android:layout_marginTop="16dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:backgroundTint="#FBC02D"
-    android:textColor="#000"
-    android:text="Pick Images (max 15)"/>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_pick_images"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:padding="12dp"
+        android:layout_gravity="center"
+        android:text="Pick Images (max 15)"
+        android:textColor="@color/button_text"
+        android:backgroundTint="@color/button_tint"
+        app:icon="@drawable/ic_camera"
+        app:iconTint="@color/button_text"
+        app:iconSize="25dp"
+        app:iconPadding="8dp"
+        app:cornerRadius="5dp"
+        app:iconGravity="textStart" />
 
-<TextView
+    <TextView
     android:id="@+id/tv_images_count"
     android:layout_marginTop="8dp"
     android:layout_width="wrap_content"
@@ -379,6 +387,20 @@ android:dividerPadding="12dp">
         android:gravity="center_vertical">
 
         <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#BDBDBD"
+            android:textColor="#000"
+            android:text="Cancel" />
+
+        <!-- spacing between buttons -->
+        <Space
+            android:layout_width="8dp"
+            android:layout_height="wrap_content" />
+
+        <Button
             android:id="@+id/btn_save"
             android:layout_width="0dp"
             android:layout_weight="1"
@@ -387,20 +409,6 @@ android:dividerPadding="12dp">
             android:textColor="#FFF"
             android:text="Save Event Details" />
 
-
-        <!-- spacing between buttons -->
-        <Space
-            android:layout_width="8dp"
-            android:layout_height="wrap_content" />
-
-        <Button
-            android:id="@+id/btn_cancel"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#BDBDBD"
-            android:textColor="#000"
-            android:text="Cancel" />
 
     </LinearLayout>
 
