--- a/app/src/main/res/drawable/spinner_box_outline.xml
+++ b/app/src/main/res/drawable/spinner_box_outline.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="@android:color/transparent"/>
-    <stroke android:width="1.5dp" android:color="#000000"/> <!-- subtle stroke; tweak color -->
+    <stroke android:width="0.8dp" android:color="@color/event_box_color"/>
     <corners android:radius="8dp"/>
     <padding android:left="4dp" android:top="4dp" android:right="4dp" android:bottom="4dp"/>
 </shape>
