--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="teal_200">#03DAC5</color>
+    <color name="event_box_color">#333333</color> <!-- Dark gray -->
+
 
 </resources>
