--- a/app/src/main/res/layout/fragment_all_users.xml
+++ b/app/src/main/res/layout/fragment_all_users.xml
@@ -49,6 +49,7 @@
                         android:id="@+id/btn_header_cta"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:backgroundTint="#FF6347"
                         android:layout_marginTop="8dp"
                         android:text="View all past images"
                         android:visibility="gone"/>
