--- a/app/src/main/res/drawable/ic_broken_image.xml
+++ b/app/src/main/res/drawable/ic_broken_image.xml
@@ -1,8 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="48dp"
-    android:height="48dp"
+    android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
-    <!-- simple broken image icon -->
-    <path android:fillColor="#FF000000" android:pathData="M21,5v10l-4,-4 -3,3 -4,-4 -6,6v-10z"/>
+    android:viewportHeight="24"
+    android:tint="?attr/colorControlNormal">
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M21,3.01c0,-1.1,-0.9,-2,-2,-2H5c-1.1,0,-2,0.9,-2,2v18c0,1.1,0.9,2,2,2h14c1.1,0,2,-0.9,2,-2V3.01zM5,21V3h14v18H5zM17.66,13.62l-2.52,3.22L13,14.01l-2.61,3.48L7,14.62V21h12.01v-6.38z"/>
 </vector>
