--- a/app/src/main/res/layout/item_gallery_header.xml
+++ b/app/src/main/res/layout/item_gallery_header.xml
@@ -44,7 +44,7 @@
             <ImageView
                 android:layout_width="14dp"
                 android:layout_height="14dp"
-                android:src="@android:drawable/ic_lock_idle_alarm"
+                android:src="@drawable/ic_clock"
                 android:contentDescription="time icon"
                 android:layout_marginEnd="4dp"
                 app:tint="#757575" />
