--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="tab_indicator">#FF5722</color>
     <color name="selected_tab_text">#FF5722</color>
     <color name="unselected_tab_text">#888888</color> <!-- Dark gray -->
+    <color name="transition_anim">#FFFFFFFF</color>
 
 
 </resources>
