Animation much more smoother now and sticks to current fragment

--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -227,6 +227,7 @@
 
             <!-- Image gallery (unchanged) -->
             <HorizontalScrollView
+                android:id="@+id/hsv_images"
                 android:layout_marginTop="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -240,7 +241,6 @@
 
 
             <LinearLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
